[project]
name = "dbt_and_dagster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "dbt-snowflake<1.10",
    "dbt-snowflake<1.10",
    "dbt-snowflake<1.10",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dbt_and_dagster.definitions"
code_location_name = "dbt_and_dagster"

